--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
         </header>
         <section class="courses">
             <article>
-                <marquee behavior="scroll" definition: "left">
+                <!-- <marquee behavior="scroll" definition: "left">
                     <img src="images/brewImages/beerfood.jpg"width="260"/>
                     <img src="images/brewImages/beerfood.jpg"width="260"/>
                     <img src="images/brewImages/beerfood.jpg"width="260"/>
-                </marquee>
+                </marquee> -->
+                <div id ="marquee">
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                </div>
+                <figure>
                     <img src="images/brewImages/beerfood.jpg" alt="Beer & Food" width="260"/>
                     <figcaption>Enjoy a tasty meal!</figcaption>
                 </figure>
