completed more image adds to individual brewery pages

--- a/pages/peddler.html
+++ b/pages/peddler.html
@@ -20,7 +20,7 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/peddler.png" alt="peddler brewing"></a>
       <h2>Peddler Brewing</h2>
       <p>The Peddler Brewing Company began with Haley and Dave Keller's love of brewing in March 2013.
           They now have 15-barrel brewing system to create and market their fantastic selections available at local stores, restaurants, and of course, their brewing house.
