--- a/pages/holymt.html
+++ b/pages/holymt.html
@@ -20,7 +20,7 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/holyMountain_logo.png" alt="Holy Mountain"></a>
       <h2>Holy Mountain Brewing</h2>
       <p>Holy Mountain Brewing started with Mike Murphy and Colin Lenfesty's shared interest in beer, specifically oak-inspired beers.
           After some planning and development, they began their operation in 2014 and continue to this day.
