--- a/pages/optimism.html
+++ b/pages/optimism.html
@@ -20,7 +20,7 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/optimism.png" alt="optimism Brewing"></a>
       <h2>Optimism Brewing</h2>
       <p>Located in the Capital Hill area of Seattle Optimism brewing boasts 16,000 square feet just for beer.  Opened by husband and wife team Troy Hakala and Gay Gilmore in 2015 it has proven to have staying power.  They do not have food, but sometimes there are food trucks in the courtyard and they let you get food delivered.  Bring your credit cards because Optimism has a “no cash, no tip” policy and all of there workers get paid a living wage.  Optimism hosts an array of meet ups and other events.</p>
     </div>
