finished adding images to each of the brewery pages and finished descriptions of all breweries

--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -20,7 +20,7 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <img src="../images/brewImages/cloudburst.png"></a>
+      <img src="../images/brewImages/cloudburst.png" alt="cloudburst">
       <h2>Cloudburst Brewing</h2>
       <p>Just weeks after Elysian Brewing was purchased by Anheuser-Busch, veteran brewer Steve Luke left his long time position with Elysian to branch off and start Cloudburst Brewing. Cloudburst Brewing sports a no-frills brewery and taproom in the heart of Seattle, serving as a landing spot for beer aficionados to try some of the most well crafted beers the city of Seattle has to offer. Cloudburst offers a limited selection of pre-filled growlers, otherwise you will only find their beers on tap at various establishments. Probably best known for their IPAs, Steve’s dedication to the craft has built quite a reputation for the still relatively young brewery.</p>
     </div>
