--- a/pages/fremont.html
+++ b/pages/fremont.html
@@ -20,7 +20,7 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/FBC-Fremont-Brewing-4C-logo.jpg" alt="fremont brewing"></a>
       <h2>Fremont Brewing</h2>
       <p>This family-owned brewery started in 2009 by founder Matt Lincecum.
           The Fremont's goal is to promote the history of Fremont area as well as provide beer made of the finest ingredients.
