--- a/pages/standard.html
+++ b/pages/standard.html
@@ -20,9 +20,9 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/standard.png" alt="standard brewing"></a>
       <h2>Standard Brewing</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <p>Owner and head brewer Justin Gerardy opened up Standard Brewing in 2013 and has been making large leaps ever since. Starting out as a nano-brewery, Standard has gone through major changes by adding more capacity plus a full menu and liquor options at their Jackson Street location. This gives patrons many different options, even if one of their dozen or so beer offerings don't quite hit the spot.</p>
     </div>
     <div id='social'>
         <ul>
