--- a/pages/twobeers.html
+++ b/pages/twobeers.html
@@ -20,9 +20,9 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/twobeerslogonew.png" alt="2beers">
       <h2>Two Beers Brewing Company</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <p>10 years into their existance, Two Beers Brewing is still one of the most consitent breweries that you can find in Seattle. Working out of an office park in the Sodo/Georgetown neighborhood, you will find a great spot for groups of all sizes with 24+ taps of Two Beers, plus sister Seattle Cider Company, as well as food prepared on site by Bread & Circus's. Defintiely one of the better options from one of the longer tenured Seattle brewing venture.</p>
     </div>
     <div id='social'>
       <ul>
