--- a/pages/ravenna.html
+++ b/pages/ravenna.html
@@ -20,7 +20,7 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/ravenna.png" alt="ravenna brewing">
       <h2>Ravenna Brewing</h2>
       <p>With a rotating stock of ales this Ravenna neighborhood gem is a hit for the locals.  It’s a nice cozy brewery nestled next to an auto body shop.  Owner Tommy Ortega poured his famous Lion Tamer bourbon vanilla porter on opening night in April 2016.  </p>
     </div>
