--- a/pages/reubens.html
+++ b/pages/reubens.html
@@ -20,9 +20,9 @@
   </header>
   <section>
     <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
+      <img src="../images/brewImages/reubens.png" alt="Reubens Brews">
       <h2>Reuben's Brews</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin magna ligula, accumsan non risus eget, mollis pulvinar justo. Nam euismod ac sem eu elementum. Vestibulum egestas porttitor maximus. Proin at purus ut dui vehicula aliquam. Duis semper, quam ut cursus tristique, sapien mauris imperdiet leo, ornare sagittis mi purus nec urna. Fusce posuere dolor lacinia mauris pulvinar condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra accumsan lectus. Nunc elit libero, lacinia ac suscipit eget, gravida nec lorem. Cras nec consequat nulla, non consequat tortor. Nullam in facilisis libero. Duis lobortis vestibulum blandit. Nunc id porttitor libero. Ut vel urna vitae sapien finibus rhoncus.</p>
+      <p>Reuben’s Brews opened in the Ballard neighborhood of Seattle in August 2012, and ever since has become one of the most popular spots for local beer in the city. In their time on the scene, they have won several awards for their beers, including winning “Mid-Sized Brewery of the Year” at the 2015 Washington Beer Awards. A bit of trivia, Reuben’s Brews is named after founders Adam and Grace Robbing’s son, Reuben!</p>
     </div>
     <div id='social'>
         <ul>
