slideshow using only css and html

--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
                     <img src="images/brewImages/beerfood.jpg"width="260"/>
                     <img src="images/brewImages/beerfood.jpg"width="260"/>
                 </marquee> -->
-                <div id ="marquee">
+                <!-- <div id ="marquee">
                         <img src="images/brewImages/beerfood.jpg"/>
                         <img src="images/brewImages/beerfood.jpg"/>
                         <img src="images/brewImages/beerfood.jpg"/>
+                </div> -->
+                <div class="container">
+                    <div class ="slideshow">
+                        <img class="first" src="allbeers.jpg/350x150">
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                    </div>
                 </div>
                 <figure>
                     <img src="images/brewImages/beerfood.jpg" alt="Beer & Food" width="260"/>
