added nav html & edited map width on all brewery pages

--- a/pages/outlander.html
+++ b/pages/outlander.html
@@ -11,12 +11,80 @@
       <div id="logo">
           <h1>Seattle Brewery Finder</h1>
       </div>
-      <nav>
-          <a href="">Home</a>
-          <a href="">Map</a>
-          <a href="">Breweries</a>
-          <a href="">About Us</a>
-      </nav>
+      <nav id="main_nav">
+          <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="../index.html">Finder</a></li>
+            <li><a href="">Breweries</a>
+            <ul>
+              <li>
+                <a href="">Ballard</a>
+                <ul>
+                  <li><a href="peddler.html">Peddler Brewing</a></li>
+                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                  <li><a href="reubens.html">Reuben's Brews</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Capitol Hill</a>
+                <ul>
+                  <li><a href="optimism.html">Optimism Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Central District</a>
+                <ul>
+                  <li><a href="standard.html">Standard Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Fremont</a>
+                <ul>
+                  <li><a href="fremont.html">Fremont Brewing</a></li>
+                  <li><a href="outlander.html">Outlander Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Interbay</a>
+                <ul>
+                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Lake City</a>
+                <ul>
+                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Magnolia</a>
+                <ul>
+                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Pike Place</a>
+                <ul>
+                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">SoDo</a>
+                <ul>
+                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Ravenna</a>
+                <ul>
+                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                </ul>
+              </li>
+            </ul>
+            </li>
+            <li><a href="aboutus.html">About Us</a></li>
+          </ul>
+        </nav>
   </header>
   <section>
     <div id='breweryInfo'>
@@ -34,7 +102,7 @@
       </ul>
     </div>
     <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.6527931589885!2d-122.35775568454201!3d47.65231359281249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015a9b05a35d7%3A0x467c8ea9869faa86!2sOutlander+Brewery+and+Pub!5e0!3m2!1sen!2sus!4v1519352783737" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.6527931589885!2d-122.35775568454201!3d47.65231359281249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015a9b05a35d7%3A0x467c8ea9869faa86!2sOutlander+Brewery+and+Pub!5e0!3m2!1sen!2sus!4v1519352783737" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id="address">
         <ul>
