--- a/pages/standard.html
+++ b/pages/standard.html
@@ -11,12 +11,80 @@
       <div id="logo">
           <h1>Seattle Brewery Finder</h1>
       </div>
-      <nav>
-          <a href="">Home</a>
-          <a href="">Map</a>
-          <a href="">Breweries</a>
-          <a href="">About Us</a>
-      </nav>
+      <nav id="main_nav">
+          <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="../index.html">Finder</a></li>
+            <li><a href="">Breweries</a>
+            <ul>
+              <li>
+                <a href="">Ballard</a>
+                <ul>
+                  <li><a href="peddler.html">Peddler Brewing</a></li>
+                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                  <li><a href="reubens.html">Reuben's Brews</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Capitol Hill</a>
+                <ul>
+                  <li><a href="optimism.html">Optimism Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Central District</a>
+                <ul>
+                  <li><a href="standard.html">Standard Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Fremont</a>
+                <ul>
+                  <li><a href="fremont.html">Fremont Brewing</a></li>
+                  <li><a href="outlander.html">Outlander Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Interbay</a>
+                <ul>
+                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Lake City</a>
+                <ul>
+                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Magnolia</a>
+                <ul>
+                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Pike Place</a>
+                <ul>
+                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">SoDo</a>
+                <ul>
+                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="">Ravenna</a>
+                <ul>
+                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                </ul>
+              </li>
+            </ul>
+            </li>
+            <li><a href="aboutus.html">About Us</a></li>
+          </ul>
+        </nav>
   </header>
   <section>
     <div id='breweryInfo'>
@@ -34,7 +102,7 @@
         </ul>
     </div>
     <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10761.497249569587!2d-122.2997013!3d47.5994109!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xec3c6b60ca0d1214!2sStandard+Brewing!5e0!3m2!1sen!2sus!4v1519276758447" width="900" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10761.497249569587!2d-122.2997013!3d47.5994109!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xec3c6b60ca0d1214!2sStandard+Brewing!5e0!3m2!1sen!2sus!4v1519276758447" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id='address'>
         <ul>
