ran into another jquery wall

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <img src="images/brewImages/beerfood.jpg"/>
                         <img src="images/brewImages/beerfood.jpg"/>
                 </div> -->
-                <div class="container">
+                <!-- <div class="container">
                     <div class ="slideshow">
                         <img class="first" src="allbeers.jpg/350x150">
                         <img src="images/brewImages/beerfood.jpg"/>
@@ -39,6 +39,12 @@
                         <img src="images/brewImages/beerfood.jpg"/>
                         <img src="images/brewImages/beerfood.jpg"/>
                     </div>
+                </div> -->
+                <div class='marquee'>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
+                        <img src="images/brewImages/beerfood.jpg"/>
                 </div>
                 <figure>
                     <img src="images/brewImages/beerfood.jpg" alt="Beer & Food" width="260"/>
