got one of the pages styled.  Waiting for pull request before affecting others

--- a/pages/holymt.html
+++ b/pages/holymt.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Holy Mountain Brewing</title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
