--- a/pages/fremont.html
+++ b/pages/fremont.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Fremont Brewing</title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
