--- a/index.html
+++ b/index.html
@@ -21,17 +21,7 @@
         </header>
         <section class="courses">
             <article>
-                <!-- <marquee behavior="scroll" definition: "left">
-                    <img src="images/brewImages/beerfood.jpg"width="260"/>
-                    <img src="images/brewImages/beerfood.jpg"width="260"/>
-                    <img src="images/brewImages/beerfood.jpg"width="260"/>
-                </marquee> -->
-                <!-- <div id ="marquee">
-                        <img src="images/brewImages/beerfood.jpg"/>
-                        <img src="images/brewImages/beerfood.jpg"/>
-                        <img src="images/brewImages/beerfood.jpg"/>
-                </div> -->
-                <!-- <div class="container">
+                 <div class="container">
                     <div class ="slideshow">
                         <img class="first" src="allbeers.jpg/350x150">
                         <img src="images/brewImages/beerfood.jpg"/>
@@ -39,13 +29,7 @@
                         <img src="images/brewImages/beerfood.jpg"/>
                         <img src="images/brewImages/beerfood.jpg"/>
                     </div>
-                </div> -->
-                <div class='marquee'>
-                        <img src="images/brewImages/beerfood.jpg"/>
-                        <img src="images/brewImages/beerfood.jpg"/>
-                        <img src="images/brewImages/beerfood.jpg"/>
-                        <img src="images/brewImages/beerfood.jpg"/>
-                </div>
+                </div> 
                 <figure>
                     <img src="images/brewImages/beerfood.jpg" alt="Beer & Food" width="260"/>
                     <figcaption>Enjoy a tasty meal!</figcaption>
