added image for urban family.  Why won't it show up?

--- a/pages/standard.html
+++ b/pages/standard.html
@@ -7,118 +7,120 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
             <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="../index.html">Finder</a></li>
+              <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
               </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
+              <li><a href="aboutus.html">About Us</a></li>
             </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-        </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <img src="../images/brewImages/standard.png" alt="standard brewing"></a>
-      <h2>Standard Brewing</h2>
-      <p>Owner and head brewer Justin Gerardy opened up Standard Brewing in 2013 and has been making large leaps ever since. Starting out as a nano-brewery, Standard has gone through major changes by adding more capacity plus a full menu and liquor options at their Jackson Street location. This gives patrons many different options, even if one of their dozen or so beer offerings don't quite hit the spot.</p>
-    </div>
-    <div id='social'>
-        <ul>
-          <li><a href='http://standardbrew.com/'>Standard Brewing Website</a></li>
-          <li><a href='https://www.facebook.com/StandardBrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
-          <li><a href='https://twitter.com/standardbrewing?lang=en'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
-          <li><a href='https://www.instagram.com/therealstandardbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
-          <li><a href='https://untappd.com/StandardBrewing'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
-        </ul>
-    </div>
-    <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10761.497249569587!2d-122.2997013!3d47.5994109!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xec3c6b60ca0d1214!2sStandard+Brewing!5e0!3m2!1sen!2sus!4v1519276758447" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id='address'>
-        <ul>
-          <li>2504 S Jackson St</li>
-          <li>Seattle, WA  98144</li>
-          <ul>
-            <li>Monday - Thursday: 3pm - 10pm</li>
-            <li>Friday - Sunday: 12pm - 12am</li>
-          </ul>
-          <li>206-535-1584</li>
-          <li>justin@standardbrew.com</li>
-        </ul>
+          </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/standard.png" alt="standard brewing"></a>
+        <h2>Standard Brewing</h2>
+        <p>Owner and head brewer Justin Gerardy opened up Standard Brewing in 2013 and has been making large leaps ever since. Starting out as a nano-brewery, Standard has gone through major changes by adding more capacity plus a full menu and liquor options at their Jackson Street location. This gives patrons many different options, even if one of their dozen or so beer offerings don't quite hit the spot.</p>
       </div>
-  </section>
-  <!-- <footer>
-    &copy Seattle Brewery Finders
-  </footer> -->
+      <div id='social'>
+          <ul>
+            <li><a href='http://standardbrew.com/'> Standard Brewing Website</a></li>
+            <li><a href='https://www.facebook.com/StandardBrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
+            <li><a href='https://twitter.com/standardbrewing?lang=en'><img src='../images/icons/twitter.png' alt='twitter logo'/> Twitter</a></li>
+            <li><a href='https://www.instagram.com/therealstandardbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/> Instagram</a></li>
+            <li><a href='https://untappd.com/StandardBrewing'><img src='../images/icons/untappd.png' alt='untappd logo'/> Untappd</a></li>
+          </ul>
+      </div>
+      <div id='map'>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10761.497249569587!2d-122.2997013!3d47.5994109!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xec3c6b60ca0d1214!2sStandard+Brewing!5e0!3m2!1sen!2sus!4v1519276758447" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id='address'>
+          <ul>
+            <li>2504 S Jackson St</li>
+            <li>Seattle, WA  98144</li>
+            <ul>
+              <li>Monday - Thursday: 3pm - 10pm</li>
+              <li>Friday - Sunday: 12pm - 12am</li>
+            </ul>
+            <li>206-535-1584</li>
+            <li>justin@standardbrew.com</li>
+          </ul>
+        </div>
+    </section>
+    <footer>
+      &copy Seattle Brewery Finders
+    </footer>
+  </div>
 </body>
 </html>
