--- a/pages/cloudburst.html
+++ b/pages/cloudburst.html
@@ -96,10 +96,10 @@
     <div id='social'>
         <ul>
           <li><a href='http://www.cloudburstbrew.com/'>Cloudburst Brewing Website</a></li>
-          <li><a href='https://www.facebook.com/cloudburstbrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
-          <li><a href='https://twitter.com/cloudburst_brew'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
-          <li><a href='https://www.instagram.com/cloudburstbrew/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
-          <li><a href='https://untappd.com/CloudburstBrewing'><img src='../images/icons/untappd.png' alt='untappd logo'/>Untappd</a></li>
+          <li><a href='https://www.facebook.com/cloudburstbrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/> Facebook</a></li>
+          <li><a href='https://twitter.com/cloudburst_brew'><img src='../images/icons/twitter.png' alt='twitter logo'/> Twitter</a></li>
+          <li><a href='https://www.instagram.com/cloudburstbrew/'><img src='../images/icons/instagram.png' alt='instagram logo'/> Instagram</a></li>
+          <li><a href='https://untappd.com/CloudburstBrewing'><img src='../images/icons/untappd.png' alt='untappd logo'/> Untappd</a></li>
     </div>
     <div id='map'>
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10758.996016614912!2d-122.345288!3d47.61157!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb68c7cbc1350f26a!2sCloudburst+Brewing!5e0!3m2!1sen!2sus!4v1519277414809" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
