--- a/pages/hellbent.html
+++ b/pages/hellbent.html
@@ -7,120 +7,122 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
             <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="../index.html">Finder</a></li>
+              <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
               </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
+              <li><a href="aboutus.html">About Us</a></li>
             </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-        </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-        <img src="../images/brewImages/hell.jpg" alt="Hellbent Brewery" width="300">
-      <h2>Hellbent Brewing Company</h2>
-      <p>Hellbent Brewing Company is a place that takes the art of brewery to the next level.  Founded by four friends, Hellbent offers a variety of drinks; from their own explicit blends, to over a dozen of local beers on tap.  Whether it's wine, cider, beer or an original brew, Hellbent is the place to sit and drink with friends, or make new ones.</p>
-    </div>
-    <div id='social'>
-      <ul>
-        <li><a href='http://www.hellbentbrewingcompany.com/'>Hellbent Brewing Website</a></li>
-        <li><a href='https://www.facebook.com/HellbentBrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
-        <li><a href='https://twitter.com/hellbentb'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
-        <li><a href='https://www.instagram.com/hellbentbrewingsea/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
-        <li><a href='https://untappd.com/HellbentBrewingCompany'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
-      </ul>
-    </div>
-    <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10735.85495250501!2d-122.2932199!3d47.7239529!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x67ac31280cbfb9d7!2sHellbent+Brewing+Company!5e0!3m2!1sen!2sus!4v1519274112948" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id="address">
+          </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+          <img src="../images/brewImages/hell.jpg" alt="Hellbent Brewery" width="300">
+        <h2>Hellbent Brewing Company</h2>
+        <p>Hellbent Brewing Company is a place that takes the art of brewery to the next level.  Founded by four friends, Hellbent offers a variety of drinks; from their own explicit blends, to over a dozen of local beers on tap.  Whether it's wine, cider, beer or an original brew, Hellbent is the place to sit and drink with friends, or make new ones.</p>
+      </div>
+      <div id='social'>
         <ul>
-          <li>13035 Lake City Way NE</li>
-          <li>Seattle, WA 98125</li>
-          <li>Hours:</li>
-          <ul id="hours">
-            <li>Monday & Thursday: 12pm-11pm</li>
-            <li>Friday & Satuday:  12pm-12am</li>
-            <li>Sunday: 12pm-10pm</li>         
-          </ul>
-          <li>Phone: (206)361-3707</li>
-          <li>Email: hellbentbrewingcompany.com</li>
+          <li><a href='http://www.hellbentbrewingcompany.com/'>Hellbent Brewing Website</a></li>
+          <li><a href='https://www.facebook.com/HellbentBrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/> Facebook</a></li>
+          <li><a href='https://twitter.com/hellbentb'><img src='../images/icons/twitter.png' alt='twitter logo'/> Twitter</a></li>
+          <li><a href='https://www.instagram.com/hellbentbrewingsea/'><img src='../images/icons/instagram.png' alt='instagram logo'/> Instagram</a></li>
+          <li><a href='https://untappd.com/HellbentBrewingCompany'><img src='../images/icons/untappd.png' alt='untappd logo'/> Untappd</a></li>
         </ul>
       </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+      <div id='map'>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10735.85495250501!2d-122.2932199!3d47.7239529!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x67ac31280cbfb9d7!2sHellbent+Brewing+Company!5e0!3m2!1sen!2sus!4v1519274112948" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id="address">
+          <ul>
+            <li>13035 Lake City Way NE</li>
+            <li>Seattle, WA 98125</li>
+            <li>Hours:</li>
+            <ul id="hours">
+              <li>Monday & Thursday: 12pm-11pm</li>
+              <li>Friday & Satuday:  12pm-12am</li>
+              <li>Sunday: 12pm-10pm</li>         
+            </ul>
+            <li>Phone: (206)361-3707</li>
+            <li>Email: hellbentbrewingcompany.com</li>
+          </ul>
+        </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
 </body>
 </html>
