--- a/pages/optimism.html
+++ b/pages/optimism.html
@@ -7,125 +7,127 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-            <ul>
-              <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
-              <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
               <ul>
-                <li>
-                  <a href="">Ballard</a>
-                  <ul>
-                    <li><a href="peddler.html">Peddler Brewing</a></li>
-                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                    <li><a href="reubens.html">Reuben's Brews</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Capitol Hill</a>
-                  <ul>
-                    <li><a href="optimism.html">Optimism Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Central District</a>
-                  <ul>
-                    <li><a href="standard.html">Standard Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Fremont</a>
-                  <ul>
-                    <li><a href="fremont.html">Fremont Brewing</a></li>
-                    <li><a href="outlander.html">Outlander Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Interbay</a>
-                  <ul>
-                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Lake City</a>
-                  <ul>
-                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Magnolia</a>
-                  <ul>
-                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Pike Place</a>
-                  <ul>
-                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">SoDo</a>
-                  <ul>
-                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Ravenna</a>
-                  <ul>
-                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                  </ul>
-                </li>
-              </ul>
-              </li>
-              <li><a href="aboutus.html">About Us</a></li>
-            </ul>
-          </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <img src="../images/brewImages/optimism.png" alt="optimism Brewing"></a>
-      <h2>Optimism Brewing</h2>
-      <p>Located in the Capital Hill area of Seattle Optimism brewing boasts 16,000 square feet just for beer.  Opened by husband and wife team Troy Hakala and Gay Gilmore in 2015 it has proven to have staying power.  They do not have food, but sometimes there are food trucks in the courtyard and they let you get food delivered.  Bring your credit cards because Optimism has a “no cash, no tip” policy and all of there workers get paid a living wage.  Optimism hosts an array of meet ups and other events.</p>
-    </div>
-    <div id='social'>
-        <ul>
-            <li><a href="http://optimismbrewing.com/">Optimism Brewing Website</a></li>
-            <li><a href="https://www.facebook.com/OptimismBrewing"><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
-            <li><a href="https://twitter.com/OptimismBrewing"><img src='../images/icons/twitter.png' alt='twitt logo'/>-Twitter</a></li>
-            <li><a href="https://www.instagram.com/optimismbrewing/"><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
-            <li><a href="https://untappd.com/OptimismBrewing"><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
-        </ul>
-    </div>
-    <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.6857430442633!2d-122.32272138436922!3d47.61279997918503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acc07f09b89%3A0xaec46580d07fc936!2sOptimism+Brewing+Company!5e0!3m2!1sen!2sus!4v1519276421081" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id='address'>
-        <ul>
-            <li>1158 Broadway</li>
-            <li>Seattle, WA 98122</li>
-            <li>hours:</li>
-                <ul id=hours>
-                    <li>Sunday  Noon-9pm</li>
-                    <li>Monday  4pm-11pm</li>
-                    <li>Tuesday 4pm-11pm</li>
-                    <li>Wednesday 4pm-11pm</li>
-                    <li>Thursday  4pm-11pm</li>
-                    <li>Friday   3pm-Midnight</li>
-                    <li>Saturday  Noon-Midnight</li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="../index.html">Finder</a></li>
+                <li><a href="">Breweries</a>
+                <ul>
+                  <li>
+                    <a href="">Ballard</a>
+                    <ul>
+                      <li><a href="peddler.html">Peddler Brewing</a></li>
+                      <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                      <li><a href="reubens.html">Reuben's Brews</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Capitol Hill</a>
+                    <ul>
+                      <li><a href="optimism.html">Optimism Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Central District</a>
+                    <ul>
+                      <li><a href="standard.html">Standard Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Fremont</a>
+                    <ul>
+                      <li><a href="fremont.html">Fremont Brewing</a></li>
+                      <li><a href="outlander.html">Outlander Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Interbay</a>
+                    <ul>
+                      <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Lake City</a>
+                    <ul>
+                      <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Magnolia</a>
+                    <ul>
+                      <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Pike Place</a>
+                    <ul>
+                      <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">SoDo</a>
+                    <ul>
+                      <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Ravenna</a>
+                    <ul>
+                      <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                    </ul>
+                  </li>
                 </ul>
-            <li>(206) 651-5429</li>
-            <li><a href="mailto:contact@optimismbrewing.com">contact@optimismbrewing.com. </a></li>
-        </ul>
-    </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+                </li>
+                <li><a href="aboutus.html">About Us</a></li>
+              </ul>
+            </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/optimism.png" alt="optimism Brewing"></a>
+        <h2>Optimism Brewing</h2>
+        <p>Located in the Capital Hill area of Seattle Optimism brewing boasts 16,000 square feet just for beer.  Opened by husband and wife team Troy Hakala and Gay Gilmore in 2015 it has proven to have staying power.  They do not have food, but sometimes there are food trucks in the courtyard and they let you get food delivered.  Bring your credit cards because Optimism has a “no cash, no tip” policy and all of there workers get paid a living wage.  Optimism hosts an array of meet ups and other events.</p>
+      </div>
+      <div id='social'>
+          <ul>
+              <li><a href="http://optimismbrewing.com/">Optimism Brewing Website</a></li>
+              <li><a href="https://www.facebook.com/OptimismBrewing"><img src='../images/icons/facebook.png' alt='facebook logo'/> Facebook</a></li>
+              <li><a href="https://twitter.com/OptimismBrewing"><img src='../images/icons/twitter.png' alt='twitt logo'/> Twitter</a></li>
+              <li><a href="https://www.instagram.com/optimismbrewing/"><img src='../images/icons/instagram.png' alt='instagram logo'/> Instagram</a></li>
+              <li><a href="https://untappd.com/OptimismBrewing"><img src='../images/icons/untappd.png' alt='untappd logo'/> Untappd</a></li>
+          </ul>
+      </div>
+      <div id='map'>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.6857430442633!2d-122.32272138436922!3d47.61279997918503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acc07f09b89%3A0xaec46580d07fc936!2sOptimism+Brewing+Company!5e0!3m2!1sen!2sus!4v1519276421081" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id='address'>
+          <ul>
+              <li>1158 Broadway</li>
+              <li>Seattle, WA 98122</li>
+              <li>hours:</li>
+                  <ul id=hours>
+                      <li>Sunday  Noon-9pm</li>
+                      <li>Monday  4pm-11pm</li>
+                      <li>Tuesday 4pm-11pm</li>
+                      <li>Wednesday 4pm-11pm</li>
+                      <li>Thursday  4pm-11pm</li>
+                      <li>Friday   3pm-Midnight</li>
+                      <li>Saturday  Noon-Midnight</li>
+                  </ul>
+              <li>(206) 651-5429</li>
+              <li><a href="mailto:contact@optimismbrewing.com">contact@optimismbrewing.com. </a></li>
+          </ul>
+      </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
   <script src = "app.js"></script>
 </body>
 </html>
