added david stoll about me section

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -32,12 +32,12 @@
       <div class="bio">
         <h3>Name</h3>
         <div class="contact">
-          <h4>Github: </h4>
-          <h4>Email: </h4>
+          <h4>Github: <a href="https://github.com/dahby">https://github.com/dahby</a></h4>
+          <h4>Email: dstoll243@gmail.com</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis ultricies enim. Nullam eu sapien lorem. Morbi sed metus a velit dapibus aliquet. Sed velit lectus, ullamcorper sed ex et, tincidunt suscipit lacus. Etiam ut mi orci. Fusce non ante ac augue sagittis feugiat. Mauris eu quam interdum, fringilla enim nec, bibendum tortor. Vivamus consectetur blandit sapien vitae dictum. Nam ante tortor, auctor sit amet tortor quis, sodales tempus quam. Vivamus sit amet nisi facilisis, viverra eros sed, imperdiet urna. Praesent et ornare ligula, sit amet vulputate nibh. Morbi tristique risus metus, nec placerat sapien mattis eget.</p>
-        <h4>Favorite Beer: </h4>
-        <h4>Favorite Brewery: </h4>
+        <p>After 10 years in the banking industry, David Stoll decided to take his life in another direction and found himself making a beer website at Code Fellows. In addition to his love of beer, you can often find David rooting for the Seattle Mariners or out and about spending way too much on new restaurants and going to concerts. David is looking forward to a successful completion of Code 201 and moving on to expand upon his existing knowledge in programming.</p>
+        <h4>Favorite Beer: Holy Mountain vol. 12</h4>
+        <h4>Favorite Brewery: Holy Mountain Brewing</h4>
       </div>
     </div>
     <!-- second -->
